--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@ text-indent:0.3in;
 <div style="text-align: center;"><br>  
 <div id="banner">  
 </div>
-<script src="https://romskosrce.github.io/chat2/script.min.js"></script>   
+<script src="https://extralux.org/7012/avatar/script.min.js"></script>   
 <br> <br> <br> <br> <br> <br> <br>  
 </div>  
 </div>  
