--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
  
 
 <script src="https://extralux.org/7012/avatar/script.min.js"></script>
-<link rel="stylesheet" href="https://extralux.org/7012/avatar/style.css">
+<link rel="stylesheet" href="https://extralux.org/7012/avatar/chat/style.css">
 <style>  
 #ghost {  
 opacity:0.7;  
